# THsip

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
bridge/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
bridge/migrations/: 001_initial.sql  002_recording_retention.sql
bridge/src/: server.ts
bridge/test/: server.test.ts
macos/: Info.plist.in  THsip.entitlements
qml/: Main.qml
resources/: api_endpoints.json  capabilities.json  dial_actions.json
scripts/: package-macos.sh
src/: backend.cpp  backend.h  contactstore.h  contactstore_macos.mm  contactstore_stub.cpp  main.cpp  platformintegration.h  platformintegration_macos.mm  platformintegration_stub.cpp  secretstore.h  secretstore_macos.mm  secretstore_stub.cpp  telephony_pjsua2.cpp  telephony_pjsua2.h
tests/: test_core.cpp
